--- a/fff.html
+++ b/fff.html
@@ -19,7 +19,9 @@ height:150px ;
   width:300px ;
   background-color: rgb(243, 240, 235);
 }
-
+iframe{
+  height:100%
+}
 
 </style>
 
@@ -30,7 +32,11 @@ height:150px ;
       <td colspan="2"> head</td>
     </tr>
     <tr>
-      <td class="menu">menu</td>
+      <td class="menu">
+        <iframe src="menu.html" frameborder=0></iframe>
+      
+          
+      </td>
       <td>content</td>
     </tr>
     <tr class="foot">
@@ -44,68 +50,6 @@ height:150px ;
 
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
